compiler/tools/fpp-check/test/state_machine/signal_uses/duplicate.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/signal_uses/duplicate.fpp:6.8
    on s enter S
       ^
error: duplicate use of signal s in state S
previous use is here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/signal_uses/duplicate.fpp:5.8
    on s enter S
       ^
